fixed gap on top

--- a/css/app.css
+++ b/css/app.css
@@ -116,7 +116,7 @@ h4 {
 .section {
     scroll-snap-align: start;
     height: 100%;
-    /* padding-top: 40px; */
+    padding-top: 40px;
     margin-bottom: 40px;
     background-position: 50% 50%;
     animation: mymove 50s infinite;
@@ -175,9 +175,9 @@ html:not([data-scroll='0']) .small-title-right {color:#000;}
 @media only screen and (max-width: 640px) {
 
 .small-titles {
-    width: calc(100% - 80px);
-    top:40px;
-    left: 40px;
+    width: calc(100% - 40px);
+    top: 20px;
+    left: 20px;
 }
 
 .mobile-hide {
